@@ -18,6 +18,9 @@ test_replicaset:
 test_sharded:
 	node test/runner.js -t sharded
 
+test_auth:
+	node test/runner.js -t auth
+
 generate_docs:
 	$(NODE) dev/tools/build-docs.js
 	make --directory=./docs/sphinx-docs --file=Makefile html
