@@ -625,8 +625,9 @@ Db.prototype.logout = function(options, callback) {
  * Authenticate a user against the server.
  *
  * Options
- *  - **authdb** {String}, The database that the credentials are for,
+ *  - **authSource** {String}, The database that the credentials are for,
  *    different from the name of the current DB, for example admin
+ *
  * @param {String} username username.
  * @param {String} password password.
  * @param {Object} [options] the options
@@ -644,6 +645,7 @@ Db.prototype.authenticate = function(username, password, options, callback) {
   // the default db to authenticate against is 'this'
   // if authententicate is called from a retry context, it may be another one, like admin
   var authdb = options.authdb ? options.authdb : self.databaseName;
+  authdb = options.authSource ? options.authSource : authdb;
   // Push the new auth if we have no previous record
   
   var numberOfConnections = 0;
@@ -2036,7 +2038,14 @@ var _finishConnecting = function(serverConfig, object, options, callback) {
   // Open the db
   db.open(function(err, db){
     if(err == null && object.auth){
-      db.authenticate(object.auth.user, object.auth.password, function(err, success){
+      // What db to authenticate against
+      var authentication_db = db;
+      if(object.db_options && object.db_options.authSource) {
+        authentication_db = db.db(object.db_options.authSource);
+      }
+
+      // Authenticate
+      authentication_db.authenticate(object.auth.user, object.auth.password, function(err, success){
         if(success){
           callback(null, db);
         } else {
